added basic home page

--- a/react-portfolio-n2j/src/input.css
+++ b/react-portfolio-n2j/src/input.css
@@ -10,3 +10,8 @@
       grid-template-columns: repeat(1, minmax(0, 1fr));
     }
 }
+@media (max-width: 2240px) {
+  .slg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
