--- a/react-portfolio-n2j/src/input.css
+++ b/react-portfolio-n2j/src/input.css
@@ -5,3 +5,14 @@
   margin: 0;
  
 }
+
+@media (max-width: 639px) {
+    .sms\:grid-cols-1 {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+}
+@media (max-width: 2240px) {
+  .slg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+}
