--- a/react-portfolio-n2j/src/input.css
+++ b/react-portfolio-n2j/src/input.css
@@ -15,3 +15,25 @@
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
+@keyframes grow {
+  0% {
+    transform: scale(0.5);
+  }
+  50% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(0.7);
+  }
+}
+
+.animate-grow {
+  animation: grow 3s ease-in-out 40s 1 normal both paused, grow-hover 0.5s ease-in-out alternate infinite;
+}
+
+@keyframes grow-hover {
+  to {
+    transform: scale(0.8);
+  }
+}
+
